finalizada la cabecera en color azul

--- a/blogpost.html
+++ b/blogpost.html
@@ -7,7 +7,9 @@
 
     <div id="container">
         <div id="cabecera">
-            cabecera
+            Hiperblog
+            <span id="tangline"></span>
+            </span>
         </div>
          <div id="post">
              <h1>Este es el titulo atractivo e interesante del post</h1>
