agregado el contenido final del blog y una mejor tipografia

--- a/blogpost.html
+++ b/blogpost.html
@@ -7,7 +7,7 @@
 
     <div id="container">
         <div id="cabecera">
-            Hiperblog
+            Hiperblog     Tu blog de cabecera
             <span id="tangline"></span>
             </span>
         </div>
@@ -15,6 +15,15 @@
              <h1>Este es el titulo atractivo e interesante del post</h1>
                  <p>Y este es el parrafo de inicio donde vamos a explicar 
                      las cosas increibles que se pueden hacer con ramas</p>
+                     <p>Los blogs son la mejor
+                         forma de compartir
+                         información y tus ideas.
+                         Mucho mas que ir a 
+                         conferencias o salir en 
+                         Youtube. Excepto si eres on rockstar. Pero
+                         estadisticamente no lo eres ... por ahora.</p>
+                         
+                     </p>
              </h1>
          </div>
      </div>
