modifique la cabecera y el color

--- a/blogpost.html
+++ b/blogpost.html
@@ -7,8 +7,8 @@
 
     <div id="container">
         <div id="cabecera">
-            Hiperblog     Tu blog de cabecera
-            <span id="tangline"></span>
+            Hiperblog
+            <span id="tangline">Tu blog de cabecera</span>
             </span>
         </div>
          <div id="post">
