--- a/blogpost.html
+++ b/blogpost.html
@@ -2,47 +2,26 @@
  <head>
         <title>Bienvenido a Hyperblog</title>
         <link rel="stylesheet" href="css/estilos.css" />
-</head>
- <body>
-
-    <div id="container">
+    </head>
+  <body>
+      <div id="container">
         <div id="cabecera">
-         Hiperblog     
-         <span id="tangline">Tu blog maestro</span>
-         </span>
             Hiperblog
             <span id="tangline">Tu blog de cabecera</span>
-            </span>
-        </div>
+         </div>
          <div id="post">
              <h1>Este es el titulo atractivo e interesante del post</h1>
              <p>Y este es el parrafo de inicio donde vamos a explicar 
              las cosas increibles que se pueden hacer con ramas</p>
-             <p>Los blogs son la mejor
-             forma de compartir
-             información y tus ideas.
-             Mucho mas que ir a 
-             conferencias o salir en 
-             Youtube. Excepto si eres on rockstar. Pero
+             <p>Los blogs son la mejor forma de compartir información y tus ideas.
+             Mucho mas que ir a conferencias o salir en 
+             Youtube. Excepto si eres un rockstar. Pero
             estadisticamente no lo eres ... por ahora.</p>
-         <p>Suscrite y dale like.</p>>
-           </p>
-                         
-                     </p>
-             </h1>
-         </div>
-     </div>
-
-
-     </p>
-
- </body>
-
-
-            </p></p>
-        </h1>
+	    <p>Suscrite y dale like.</p>>
+           </div>
+           <div id="footer">
+             Hecho por Sharina Mora  &lt;3
+            </div>
+        </div>
     </body>
-            
-        </title>
-    </head>
-</html>
+ </html>
