--- a/blogpost.html
+++ b/blogpost.html
@@ -18,6 +18,7 @@
                conferencias o salir en Youtube. Excepto si eres un rockstar. Pero
               estadisticamente no lo eres ... por ahora.</p>
              <p>Suscrite y dale like.</p>
+             <p>Hecho por Sharina Mora.</p>
              </div>
      </div>
   </body>
