--- a/blogpost.html
+++ b/blogpost.html
@@ -18,7 +18,9 @@
                conferencias o salir en Youtube. Excepto si eres un rockstar. Pero
               estadisticamente no lo eres ... por ahora.</p>
              <p>Suscrite y dale like.</p>
-             <p>Hecho por Sharina Mora.</p>
+             </div>
+             <div id="footer">
+                   Hecho por Sharina Mora &lt;3
              </div>
      </div>
   </body>
