cambio al tagible y color del footer :)

--- a/blogpost.html
+++ b/blogpost.html
@@ -8,7 +8,7 @@
             <div id="cabecera">
                 <img id="logo" src="imagen/cafe.png" />
                  Hyperblog     
-                 <span id="tangline">Tu blog de cabecera</span>
+                 <span id="tangline">Tu blog de confianza</span>
         </div>
          <div id="post">
              <h1>Aqu&iacute; inicia la historia de un gran proyecto.</h1>
